--- a/templates/list.html
+++ b/templates/list.html
@@ -3,29 +3,29 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Jogoteca</title>
+        <title>Games</title>
     </head>
     <body>
         <div class="container">
             <div class="page-header">
-                <h1>Jogoteca</h1>
+                <h1>{{ title }}</h1>
             </div>
             <table class="table table-striped table-responsive table-bordered">
                 <thead class="thead-default">
                     <tr>
-                        <th>None</th>
+                        <th>Name</th>
+                        <th>Category</th>
+                        <th>Console</th>
                     </tr>
                 </thead>
                 <tbody>
+                    {% for game in games %}
                     <tr>
-                        <td>God of War</td>
+                        <td>{{ game.name }}</td>
+                        <td>{{ game.category }}</td>
+                        <td>{{ game.console }}</td>
                     </tr>
-                    <tr>
-                        <td>Skyrim</td>
-                    </tr>
-                    <tr>
-                        <td>Valorant</td>
-                    </tr>
+                    {% endfor %}
                 </tbody>
             </table>
         </div>
