--- a/templates/list.html
+++ b/templates/list.html
@@ -2,16 +2,16 @@
 <table class="table table-striped table-responsive table-bordered">
     <thead class="thead-default">
         <tr>
-            <th>Name</th>
-            <th>Category</th>
+            <th>Nome</th>
+            <th>Categoria</th>
             <th>Console</th>
         </tr>
     </thead>
     <tbody>
         {% for game in games %}
         <tr>
-            <td>{{ game.name }}</td>
-            <td>{{ game.category }}</td>
+            <td>{{ game.nome }}</td>
+            <td>{{ game.categoria }}</td>
             <td>{{ game.console }}</td>
         </tr>
         {% endfor %}
