--- a/templates/new.html
+++ b/templates/new.html
@@ -2,12 +2,12 @@
 <form action="{{ url_for('create') }}" method="POST">
     <fieldset>
         <div class="form-group">
-            <label for="name">Name</label>
-            <input type="text" id="name" name="name" class="form-control" />
+            <label for="nome">Nome</label>
+            <input type="text" id="nome" name="nome" class="form-control" />
         </div>
         <div class="form-group">
-            <label for="category">Category</label>
-            <input type="text" id="category" name="category" class="form-control" />
+            <label for="categoria">Categoria</label>
+            <input type="text" id="categoria" name="categoria" class="form-control" />
         </div>
         <div class="form-group">
             <label for="console">Console</label>
